feat: lambda