@@ -3,7 +3,9 @@ package algorithm.ps;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.ArrayDeque;
+import java.util.ArrayList;
 import java.util.Deque;
+import java.util.List;
 import java.util.StringTokenizer;
 
 public class P5430 {
@@ -16,48 +18,62 @@ public class P5430 {
             final String functions = br.readLine();
             final int size = Integer.parseInt(br.readLine());
             String input = br.readLine();
+            boolean isReverse = false;
+            boolean isCorrect = true;
 
-            Deque<Integer> numbers = parse(input);
-            boolean isPrime = true;
+            List<Integer> numbers = parse(input);
             for (int j = 0; j < functions.length(); j++) {
-                final char ch = functions.charAt(j);
-                if (ch == 'R') {
-                    Deque<Integer> reverse = new ArrayDeque<>();
-                    for (int k = 0; k < numbers.size(); k++) {
-                        final int last = numbers.removeLast();
-                        /*numbers.addFirst(last);
-                        reverse.addLast(last);
-                        numbers = reverse;
-                        System.out.println("reverse = " + reverse);
-                        System.out.println("numbers = " + numbers);*/
-                    }
+                final char function = functions.charAt(j);
+                if (function == 'R') {
+                    isReverse = !isReverse;
                 }
-                if (ch == 'D') {
+                if (function == 'D') {
                     if (numbers.isEmpty()) {
-                        isPrime = false;
                         sb.append("error")
                                 .append("\n");
+                        isCorrect = false;
                         break;
                     }
-                    numbers.removeFirst();
+                    if (isReverse) {
+                        numbers.remove(numbers.size() - 1);
+                    }
+                    if (!isReverse) {
+                        numbers.remove(0);
+                    }
                 }
             }
-            if (isPrime) {
-                sb.append(numbers)
+            if (isCorrect) {
+                sb.append("[");
+                if (isReverse) {
+                    for (int j = numbers.size() - 1; j >= 0; j--) {
+                        sb.append(numbers.get(j));
+                        if (j != 0) {
+                            sb.append(",");
+                        }
+                    }
+                }
+                if (!isReverse) {
+                    for (int j = 0; j < numbers.size(); j++) {
+                        sb.append(numbers.get(j));
+                        if (j != numbers.size() - 1) {
+                            sb.append(",");
+                        }
+                    }
+                }
+                sb.append("]")
                         .append("\n");
             }
         }
-
         System.out.println(sb);
     }
 
-    static Deque<Integer> parse(String input) {
+    static List<Integer> parse(String input) {
         input = input.substring(1, input.length() - 1);
         StringTokenizer tokens = new StringTokenizer(input, "\\,");
-        Deque<Integer> numbers = new ArrayDeque<>();
+        List<Integer> numbers = new ArrayList<>();
         while (tokens.hasMoreTokens()) {
             final int number = Integer.parseInt(tokens.nextToken());
-            numbers.addLast(number);
+            numbers.add(number);
         }
         return numbers;
     }
